# react-native-splash-screen

./: CONTRIBUTING.md  LICENSE  README.md  SplashScreen.podspec  package.json  react-native-splash-screen.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/java/com/splashscreen/: SplashScreen.kt  SplashScreenModule.kt  SplashScreenPackage.kt
android/src/main/res/values/: refs.xml  styles.xml
cpp/: react-native-splash-screen.cpp  react-native-splash-screen.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/splashscreen/example/: MainActivity.kt  (+1 more)
example/android/app/src/main/res/drawable/: launch_screen.xml
example/android/app/src/main/res/layout/: splash_screen.xml
example/android/app/src/main/res/values/: colors.xml  styles.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/SplashScreenExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SplashScreenExample.xcodeproj/: project.pbxproj
example/ios/SplashScreenExample.xcodeproj/xcshareddata/xcschemes/: SplashScreenExample.xcscheme
example/ios/SplashScreenExample.xcworkspace/: contents.xcworkspacedata
example/ios/SplashScreenExampleTests/: SplashScreenExampleTests.m
example/src/: App.tsx
ios/: SplashScreen-Bridging-Header.h  SplashScreen.h  SplashScreen.mm  SplashScreen.swift  SplashScreenBridge.mm
src/: NativeSplashScreen.ts  index.tsx
src/__tests__/: index.test.tsx
